Holding off on JS approach for now. Doing it mostly in HTML/CSS for an outline. Implemented toolbar and logo, working on login now

--- a/WIP-frontend/index.html
+++ b/WIP-frontend/index.html
@@ -8,25 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Scripts to load -->
     <script src="./js/page_loader.js" type="module"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="page-container" class="d-flex flex-column container-fluid">
-        <div id="toolbar">
-            <div id="logo_row" class="row">
-                <div id="filler" class="col"></div>
-                <div id="logo-toolbar" class="col text-center">
-                    <img id="toolbar-logo" src="./images/sample_logo.png">
-                </div>
-                <div id="login-toolbar" class="col">
-                    <div id="login-button">Login</div>
-                </div>
-            </div>
-        </div>
-        <div id="page-content"></div>
-
-    </div>
+    <div id="page-container"></div>
     <!-- Scripts that bootstrap may require -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
