Aligned logo and login button on the toolbar correctly

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                     <img id="toolbar-logo" src="./images/sample_logo.png">
                 </div>
                 <div id="login-toolbar" class="col">
-                    <div id="login-button">Login</div>
+                    <div id="login-button" class="d-flex justify-content-end">
+                        <div id="avatar-container">
+                            <img id="avatar-image" src="./images/login_avatar.png">
+                        </div>
+                        <div>Login</div>
+                    </div>
                 </div>
             </div>
         </div>
