--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Scripts to load -->
-    <script src="./js/page_loader.js" type="module"></script>
+    <script src="basic.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,7 +29,32 @@
                 </div>
             </div>
         </div>
-        <div id="page-content"></div>
+        <div id="page-content">
+            <div id="main_page" class="page">
+                <div id="main_button_row" class="d-flex justify-content-center" style="margin-top: 25px;">
+                    <div id="habits_page_main_button" class="main-button d-flex justify-content-center align-items-center flex-column">
+                        <div class="row main-button-text">habits</div>
+                        <img id="habits_button_logo" class="button-image row" src="./images/notepad_logo.png">
+                    </div>
+                    <div id="pictures_page_main_button" class="main-button d-flex justify-content-center align-items-center flex-column">
+                        <div class="row main-button-text">pictures</div>
+                        <img id="pictures_button_logo" class="button-image" src="./images/camera_logo.png">
+                    </div>
+
+                </div>
+                <div id="sub_button_row" class="d-flex justify-content-center" style="margin-top: 50px;">
+                    <div id="theme_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
+                        <img id="theme_button_logo" class="button-image" src="./images/palette_logo.png">
+                    </div>
+                    <div id="add_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
+                        <img id="add_button_logo" class="button-image" src="./images/add_logo.png">
+                    </div>
+                    <div id="setting_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
+                        <img id="setting_button_logo" class="button-image" src="./images/settings_logo.png">
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
     <!-- Scripts that bootstrap may require -->
