--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
 </head>
 
 <body>
-    <div id="page-container" class="d-flex flex-column container-fluid">
+    <div id="page-container" class="d-flex flex-column container-fluid" style="margin-top: 0.5%;">
         <div id="toolbar">
             <div id="logo_row" class="row">
                 <div id="filler" class="col"></div>
-                <div id="logo-toolbar" class="col text-center">
-                    <img id="toolbar-logo" src="./images/sample_logo.png">
+                <div id="logo-toolbar" class="d-flex justify-content-center">
+                    <div id="toolbar-logo-button" class="main-button d-flex justify-content-center align-items-center flex-column">
+                        <div style="color: white; font-weight: 500;">LOGO</div>
+                    </div>
                 </div>
-                <div id="login-toolbar" class="col">
+                <div id="login-toolbar" class="col" style="margin-right: 1%;">
                     <div id="login-button" class="d-flex justify-content-end">
                         <div id="avatar-container">
                             <img id="avatar-image" src="./images/login_avatar.png">
                         </div>
-                        <div>Login</div>
+                        <div style="font-weight: 500;">Login</div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="page-content">
-            <div id="main_page" class="page">
-                <div id="main_button_row" class="d-flex justify-content-center" style="margin-top: 25px;">
+            <div id="main_page">
+                <div id="main_button_row" class="d-flex justify-content-center" style="margin-top: 1%;">
                     <div id="habits_page_main_button" class="main-button d-flex justify-content-center align-items-center flex-column">
                         <div class="row main-button-text">habits</div>
                         <img id="habits_button_logo" class="button-image row" src="./images/notepad_logo.png">
@@ -42,7 +44,7 @@
                     </div>
 
                 </div>
-                <div id="sub_button_row" class="d-flex justify-content-center" style="margin-top: 50px;">
+                <div id="sub_button_row" class="d-flex justify-content-center" style="margin-top: 2%;">
                     <div id="theme_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
                         <img id="theme_button_logo" class="button-image" src="./images/palette_logo.png">
                     </div>
