Implemented page switching feature and outlines on where groupmates should work. Need to add toolbar

--- a/index.html
+++ b/index.html
@@ -32,29 +32,42 @@
             </div>
         </div>
         <div id="page-content">
-            <div id="main_page">
-                <div id="main_button_row" class="d-flex justify-content-center" style="margin-top: 1%;">
-                    <div id="habits_page_main_button" class="main-button d-flex justify-content-center align-items-center flex-column">
+            <!-- THIS IS THE MAIN PAGE -->
+            <div id="main-page" class="page">
+                <div id="main-button-row" class="d-flex justify-content-center" style="margin-top: 1%;">
+                    <div id="habits-page-main-button" class="main-button d-flex justify-content-center align-items-center flex-column">
                         <div class="row main-button-text">habits</div>
-                        <img id="habits_button_logo" class="button-image row" src="./images/notepad_logo.png">
+                        <img id="habits-button-logo" class="button-image row" src="./images/notepad_logo.png">
                     </div>
-                    <div id="pictures_page_main_button" class="main-button d-flex justify-content-center align-items-center flex-column">
+                    <div id="pictures-page-main-button" class="main-button d-flex justify-content-center align-items-center flex-column">
                         <div class="row main-button-text">pictures</div>
-                        <img id="pictures_button_logo" class="button-image" src="./images/camera_logo.png">
+                        <img id="pictures-button-logo" class="button-image" src="./images/camera_logo.png">
                     </div>
 
                 </div>
-                <div id="sub_button_row" class="d-flex justify-content-center" style="margin-top: 2%;">
-                    <div id="theme_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
-                        <img id="theme_button_logo" class="button-image" src="./images/palette_logo.png">
+                <div id="sub-button-row" class="d-flex justify-content-center" style="margin-top: 2%;">
+                    <div id="theme-page-sub-button" class="sub-button d-flex justify-content-center align-items-center">
+                        <img id="theme-button-logo" class="button-image" src="./images/palette_logo.png">
                     </div>
-                    <div id="add_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
-                        <img id="add_button_logo" class="button-image" src="./images/add_logo.png">
+                    <div id="add-page-sub-button" class="sub-button d-flex justify-content-center align-items-center">
+                        <img id="add-button-logo" class="button-image" src="./images/add_logo.png">
                     </div>
-                    <div id="setting_page_sub_button" class="sub-button d-flex justify-content-center align-items-center">
-                        <img id="setting_button_logo" class="button-image" src="./images/settings_logo.png">
+                    <div id="setting-page-sub-button" class="sub-button d-flex justify-content-center align-items-center">
+                        <img id="setting-button-logo" class="button-image" src="./images/settings_logo.png">
                     </div>
                 </div>
+            </div>
+            <!-- Where you should work on for the habits page. Habits main button and toolbar leads here -->
+            <div id="habits-page" class="page" style="background-color:red;">
+                <div>THIS IS THE HABITS PAGE! REMEMBER TO REMOVE STYLE FROM habits-page DIV ID WHEN YOU'RE DONE</div>
+            </div>
+            <!-- Where you should work on for the pictures page. Pictures main button and toolbar leads here -->
+            <div id="pictures-page" class="page" style="background-color:greenyellow;">
+                <div>THIS IS THE PICTURES PAGE! REMEMBER TO REMOVE STYLE FROM pictures-page DIV ID WHEN YOU'RE DONE</div>
+            </div>
+            <!-- Where you should work on for the add page. Add main button and toolbar leads here -->
+            <div id="add-page" class="page" style="background-color:fuchsia;">
+                <div>THIS IS THE ADD PAGE! REMEMBER TO REMOVE STYLE FROM add-page DIV ID WHEN YOU'RE DONE</div>
             </div>
         </div>
 
