Toolbar buttons should be working now! Yun's part should be done (part0 needs to be done by me)

--- a/index.html
+++ b/index.html
@@ -27,13 +27,20 @@
                             <img id="avatar-image" src="./images/login_avatar.png">
                         </div>
                         <div style="font-weight: 500;">Login</div>
+                        <div style="min-width: 2%"></div>
                     </div>
                 </div>
             </div>
             <div id="text-row" class="row">
-                <div id="toolbar-habit"></div>
-                <div id="toolbar-picture"></div>
-                <div id="toolbar-add"></div>
+                <div id="toolbar-habit" class="d-flex justify-content-center col">
+                    <div id="habit-textbox" class="toolbar-textbox text-center">Habits</div>
+                </div>
+                <div id="toolbar-picture" class="d-flex justify-content-center col">
+                    <div id="picture-textbox" class="toolbar-textbox text-center">Pictures</div>
+                </div>
+                <div id="toolbar-add" class="d-flex justify-content-center col">
+                    <div id="add-textbox" class="toolbar-textbox text-center">Add</div>
+                </div>
             </div>
             <div id="toolbar-divider" class="align-self-center">
             </div>
