montly view page

--- a/index.html
+++ b/index.html
@@ -137,6 +137,134 @@
                     </div>
 
                 </div>
+            
+            </div>
+            <div id = "monthly-habits-page" class = "page">
+                <div id = "grid-container" class = "container">
+                    <h1 id = "habits-month">MONTH</h1>
+                    <br>
+                    <div class = "row">
+                        <div class = "col-2" >
+                            <p id = "habit-label"><b>Habit 1:</b></p>
+                        </div>
+                        <div class = "col-10">
+                            <div class = "grid">
+                                <div class = "day">01</div>
+                                <div class = "day">02</div>
+                                <div class = "day">03</div>
+                                <div class = "day">04</div>
+                                <div class = "day">05</div>
+                                <div class = "day">06</div>
+                                <div class = "day">07</div>
+                                <div class = "day">08</div>
+                                <div class = "day">09</div>
+                                <div class = "day">10</div>
+                                <div class = "day">11</div>
+                                <div class = "day">12</div>
+                                <div class = "day">13</div>
+                                <div class = "day">14</div>
+                                <div class = "day">15</div>
+                                <div class = "day">16</div>
+                                <div class = "day">17</div>
+                                <div class = "day">18</div>
+                                <div class = "day">19</div>
+                                <div class = "day">20</div>
+                                <div class = "day">21</div>
+                                <div class = "day">22</div>
+                                <div class = "day">23</div>
+                                <div class = "day">24</div>
+                                <div class = "day">25</div>
+                                <div class = "day">26</div>
+                                <div class = "day">27</div>
+                                <div class = "day">28</div>
+                                <div class = "day">29</div>
+                                <div class = "day">30</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "row">
+                        <div class = "col-2">
+                            <p id = "habit-label"><b>Habit 2:</b></p>
+                        </div>
+                        <div class = "col-10">
+                            <div class = "grid">
+                                <div class = "day">01</div>
+                                <div class = "day">02</div>
+                                <div class = "day">03</div>
+                                <div class = "day">04</div>
+                                <div class = "day">05</div>
+                                <div class = "day">06</div>
+                                <div class = "day">07</div>
+                                <div class = "day">08</div>
+                                <div class = "day">09</div>
+                                <div class = "day">10</div>
+                                <div class = "day">11</div>
+                                <div class = "day">12</div>
+                                <div class = "day">13</div>
+                                <div class = "day">14</div>
+                                <div class = "day">15</div>
+                                <div class = "day">16</div>
+                                <div class = "day">17</div>
+                                <div class = "day">18</div>
+                                <div class = "day">19</div>
+                                <div class = "day">20</div>
+                                <div class = "day">21</div>
+                                <div class = "day">22</div>
+                                <div class = "day">23</div>
+                                <div class = "day">24</div>
+                                <div class = "day">25</div>
+                                <div class = "day">26</div>
+                                <div class = "day">27</div>
+                                <div class = "day">28</div>
+                                <div class = "day">29</div>
+                                <div class = "day">30</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "row">
+                        <div class = "col-2">
+                            <p id = "habit-label"><b>Habit 3:</b></p>
+                        </div>
+                        <div class = "col-10">
+                            <div class = "grid">
+                                <div class = "day">01</div>
+                                <div class = "day">02</div>
+                                <div class = "day">03</div>
+                                <div class = "day">04</div>
+                                <div class = "day">05</div>
+                                <div class = "day">06</div>
+                                <div class = "day">07</div>
+                                <div class = "day">08</div>
+                                <div class = "day">09</div>
+                                <div class = "day">10</div>
+                                <div class = "day">11</div>
+                                <div class = "day">12</div>
+                                <div class = "day">13</div>
+                                <div class = "day">14</div>
+                                <div class = "day">15</div>
+                                <div class = "day">16</div>
+                                <div class = "day">17</div>
+                                <div class = "day">18</div>
+                                <div class = "day">19</div>
+                                <div class = "day">20</div>
+                                <div class = "day">21</div>
+                                <div class = "day">22</div>
+                                <div class = "day">23</div>
+                                <div class = "day">24</div>
+                                <div class = "day">25</div>
+                                <div class = "day">26</div>
+                                <div class = "day">27</div>
+                                <div class = "day">28</div>
+                                <div class = "day">29</div>
+                                <div class = "day">30</div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="d-flex justify-content-center" id = "daily-page-button"> 
+                        <button type = "button" class = "btn btn-light">Daily View</button>
+                    </div>
+                </div>
             </div>
             <!-- Where you should work on for the pictures page. Pictures main button and toolbar leads here -->
             <div id="pictures-page" class="page" style="background-color:greenyellow;">
