--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                     </div>
                 </div>
             </div>
-            <!-- Where you should work on for the habits page. Habits main button and toolbar leads here -->
+            <!-- THIS IS THE HABITS PAGE FOR DAILY AND MONTHLY -->
             <div id="habits-page" class="page">
                 <div class = "container">
                     <div class = "row">
                         <div id = "habit-to-do" class = "col-4" >
-                            <div class = "card" style="background-color:mediumpurple;">
+                            <div class = "card" id = "habit-card">
                                 <div class = "card-body">
                                     <h1 id = "habits-date">DATE</h1>
                                     <div id = "habits-list">
