Add Habits & Picture section + Gallery in CSS/HTML

--- a/index.html
+++ b/index.html
@@ -266,14 +266,184 @@
                     </div>
                 </div>
             </div>
-            <!-- Where you should work on for the pictures page. Pictures main button and toolbar leads here -->
-            <div id="pictures-page" class="page" style="background-color:greenyellow;">
-                <div>THIS IS THE PICTURES PAGE! REMEMBER TO REMOVE STYLE FROM pictures-page DIV ID WHEN YOU'RE DONE</div>
+            <div id="pictures-page" class="page">
+                <img class="photo-image" src="./images/camera_logo.png">
+                <div class="container gallery-container">
+                        <div class="row" id="gallery-row">
+                            <div class="column" id="gallery-column">
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                            </div>
+                            <div class="column" id="gallery-column">
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                            </div>
+                            <div class="column" id="gallery-column">
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                            </div>
+                            <div class="column" id="gallery-column">
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic4.jpg">
+                                    <img src="./images/pic4.jpg" alt="flower">
+                                </a>
+                                <a class="lightbox" href="./images/pic5.jpg">
+                                    <img src="./images/pic5.jpg" alt="flowerButterfly">
+                                </a>
+                                <a class="lightbox" href="./images/pic1.jpg">
+                                    <img src="./images/pic1.jpg" alt="pinkFlower">
+                                </a>
+                                <a class="lightbox" href="./images/pic3.jpg">
+                                    <img src="./images/pic3.jpg" alt="flowers">
+                                </a>
+                            </div>
+                        </div>
+                </div>
             </div>
             <!-- Where you should work on for the add page. Add main button and toolbar leads here -->
-            <div id="add-page" class="page" style="background-color:fuchsia;">
-                <div>THIS IS THE ADD PAGE! REMEMBER TO REMOVE STYLE FROM add-page DIV ID WHEN YOU'RE DONE</div>
+            <div id="add-page" class="page">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card" id="add-habit-card">
+                            <div class="card-body">
+                                <h1 class="card-title text-center">Add Habit</h1>
+                                <form id="habits-form" action="">
+                                    <div class="form-group">
+                                        <label for="habit-name">Habit Name</label>
+                                        <input type="text" class="form-control" id="habit-name"
+                                            placeholder="Habit Name">
+                                    </div>
+                                </form>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1">Month:</span>
+                                    </div>
+                                    <div class="dropdown">
+                                        <!-- <p id="habit-dropdown-label">Month:</p> -->
+                                        <button class="btn btn-secondary dropdown-toggle" type="button"
+                                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">
+                                            Pick Month
+                                        </button>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                            <a class="dropdown-item" href="#">January</a>
+                                            <a class="dropdown-item" href="#">February</a>
+                                            <a class="dropdown-item" href="#">March</a>
+                                            <a class="dropdown-item" href="#">April</a>
+                                            <a class="dropdown-item" href="#">May</a>
+                                            <a class="dropdown-item" href="#">June</a>
+                                            <a class="dropdown-item" href="#">July</a>
+                                            <a class="dropdown-item" href="#">August</a>
+                                            <a class="dropdown-item" href="#">September</a>
+                                            <a class="dropdown-item" href="#">October</a>
+                                            <a class="dropdown-item" href="#">November</a>
+                                            <a class="dropdown-item" href="#">December</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br>
+                                <div id="add-habit-sub-button"
+                                    class="add-habit-btn d-flex justify-content-center sub-button-primary">
+                                    <img id="add-button-logo" src="./images/add_logo.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <div class="card" id="add-pic-card">
+                            <div class="card-body">
+                                <h1 class="card-title text-center">Add Picture</h1>
+                                <div class="upload-drop-box" id="drop-box">
+                                    Drag and drop files here
+                                </div>
+                                <div id="add-pic-sub-button"
+                                    class="add-pic-btn d-flex justify-content-center sub-button-primary">
+                                    <img id="add-button-logo" src="./images/add_logo.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
 
     </div>
