--- a/client/index.html
+++ b/client/index.html
@@ -14,11 +14,11 @@
 <body>
     <div id="page-container" class="d-flex flex-column container-fluid" style="margin-top: 0.5%;">
         <div id="toolbar" class="d-flex flex-column">
-            <div id="logo_row" class="row">
+            <div id="logo-row" class="row">
                 <div id="filler" class="col"></div>
                 <div id="logo-toolbar" class="d-flex justify-content-center">
                     <div id="toolbar-logo-button" class="main-button d-flex justify-content-center align-items-center flex-column">
-                        <div style="color: white; font-weight: 500;">LOGO</div>
+                        <div id="logo-text-placeholder">LOGO</div>
                     </div>
                 </div>
                 <div id="login-toolbar" class="col">
@@ -26,16 +26,16 @@
                         <div id="avatar-container">
                             <img id="avatar-image" src="./images/login_avatar.png">
                         </div>
-                        <div style="font-weight: 500;">Login</div>
-                        <div style="min-width: 2%"></div>
+                        <div id="login-text">Login</div>
+                        <div id="login-buffer"></div>
                     </div>
                 </div>
             </div>
             <div id="text-row" class="row">
-                <div id="toolbar-habit" class="d-flex justify-content-center col">
+                <div id="toolbar-habits" class="d-flex justify-content-center col">
                     <div id="habit-textbox" class="toolbar-textbox text-center">Habits</div>
                 </div>
-                <div id="toolbar-picture" class="d-flex justify-content-center col">
+                <div id="toolbar-pictures" class="d-flex justify-content-center col">
                     <div id="picture-textbox" class="toolbar-textbox text-center">Pictures</div>
                 </div>
                 <div id="toolbar-add" class="d-flex justify-content-center col">
