Made main page load by JS. Fixed up toolbar row issues

--- a/client/index.html
+++ b/client/index.html
@@ -16,30 +16,7 @@
         
         <div id="page-content">
             <!-- THIS IS THE MAIN PAGE -->
-            <div id="main-page" class="page">
-                <div id="main-button-row" class="d-flex justify-content-center">
-                    <div id="habits-page-main-button" class="main-button d-flex justify-content-center align-items-center flex-column">
-                        <div class="row main-button-text">habits</div>
-                        <img id="habits-button-logo" class="button-image row" src="./images/notepad_logo.png">
-                    </div>
-                    <div id="pictures-page-main-button" class="main-button d-flex justify-content-center align-items-center flex-column">
-                        <div class="row main-button-text">pictures</div>
-                        <img id="pictures-button-logo" class="button-image" src="./images/camera_logo.png">
-                    </div>
-
-                </div>
-                <div id="sub-button-row" class="d-flex justify-content-center">
-                    <div id="theme-page-sub-button" class="sub-button d-flex justify-content-center align-items-center">
-                        <img id="theme-button-logo" class="button-image" src="./images/palette_logo.png">
-                    </div>
-                    <div id="add-page-sub-button" class="sub-button d-flex justify-content-center align-items-center">
-                        <img id="add-button-logo" class="button-image" src="./images/add_logo.png">
-                    </div>
-                    <div id="setting-page-sub-button" class="sub-button d-flex justify-content-center align-items-center">
-                        <img id="setting-button-logo" class="button-image" src="./images/settings_logo.png">
-                    </div>
-                </div>
-            </div>
+            
             <!-- THIS IS THE HABITS PAGE FOR DAILY AND MONTHLY -->
             <div id="habits-page" class="page">
                 <div class = "container">
@@ -236,7 +213,7 @@
                 </div>
             </div>
             <div id="pictures-page" class="page">
-                <img class="photo-image" src="./images/camera_logo.png">
+                <img class="photo-image" src="./images/pictures_logo.png">
                 <div class="container gallery-container">
                         <div class="row" id="gallery-row">
                             <div class="column" id="gallery-column">
