Really bad way of implementing login page --> main page done. Need to create API and integrate with it now

--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <div id="page-container" class="d-flex flex-column container-fluid" style="margin-top: 0.5%;">
+    <div id="login-container">
         
+    </div>
+    <div id="page-container" class="d-flex flex-column container-fluid">
         <div id="page-content">
-            <!-- THIS IS THE MAIN PAGE -->
-            
             <!-- THIS IS THE HABITS PAGE FOR DAILY AND MONTHLY -->
             <div id="habits-page" class="page">
                 <div class = "container">
